--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -12,14 +12,14 @@
 
 /* body */
 body {
-  background: #e9e9e9;
+  background: rgb(207, 211, 216);
   color: #5e5e5e;
   font: 400 87.5%/1.5em 'Open Sans', sans-serif;
 }
 
 /* Form Layout */
 .form-wrapper {
-  background: #fafafa;
+  background: whitesmoke;
   margin: 3em auto;
   padding: 0 1em;
   max-width: 370px;
