--- a/WebContent/css/sign-up.css
+++ b/WebContent/css/sign-up.css
@@ -22,7 +22,7 @@ form {
     top: 50%; 
     left: 50%; 
     -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-62%);
     max-width: 100vw;
     max-height: 150vh;
 }
@@ -36,5 +36,6 @@ h2 {
 body {
     margin-top: 470px;
     height: 0px;
+    margin-bottom: 20px;
     background-color: rgb(207, 211, 216);
 }
