--- a/WebContent/css/mypage.css
+++ b/WebContent/css/mypage.css
@@ -20,14 +20,20 @@ body{
 	border-bottom:none;
   }
   .blue{
-  color: #fff!important;
-  background-color: #5ea5ff!important;
-  border-bottom: #e2e2e2!important;
-    font-weight: bold!important;
+  	background-color: #5ea5ff;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all  0.3s ease;
+	color: #ffffff;
+ }
+.blue:hover {
+background-color :#007bff;
+color: #ffffff;
 }
-  .nav-tabs .nav-link.active {
+  .nav-tabs .nav-link.active.blue {
     color: #ffffff;
-    background-color: #5ea5ff;
+    background-color: #9eceff;
     border-bottom: #e2e2e2;
     font-weight: bold;
 }
