--- a/WebContent/css/timeline.css
+++ b/WebContent/css/timeline.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-/*/////////////////////////////////////////////////
-//twitter風チャット画面(会話方式)を記事に表示する方法
-/////////////////////////////////////////////////*/
+body{
+	background:rgb(207, 211, 216);
+}
 .twitter__container {
   padding: 0;
   background: #ffffff;
