--- a/WebContent/css/hinagata.css
+++ b/WebContent/css/hinagata.css
@@ -48,7 +48,7 @@ address {
 
 }
 .left_menu{
-    background-color: #f5f5f5;
+    background-color: #e3e3e3;
     margin-top: 7vh;
     margin-left: 0%;
     width: 20%;
@@ -60,9 +60,10 @@ address {
     width: 60%;
     height: 90vh;
     overflow: scroll;
+    background:#f5f5f5
 }
 .right_menu{
-    background-color: #f5f5f5;
+    background-color: #e3e3e3;
     margin-top: 7vh;
     margin-left: 0%;
     width: 20%;
@@ -72,7 +73,7 @@ address {
     width: 100%;
     margin-top: 0vh;
     height: 5vh;
-    background-color: green;
+    background-color: #f5f5f5;
     /* footerを下部に固定する */
 }
 /*
