--- a/WebContent/css/mypage.css
+++ b/WebContent/css/mypage.css
@@ -49,6 +49,12 @@ color: #ffffff;
   }
   .username{
 	  margin: 10px 0px 20px 20px;
+	  display:flex;
+  }
+  .followbutton{
+	height:35px;
+	margin-top:6px;
+	margin-left:20px;
   }
   .bg-white{
 	  margin-bottom: 15px;
